...
    <string name="overflow_add_to_fav">Add to favorites</string>
    <string name="overflow_open_in_browser">Open in browser</string>
    <string name="overflow_remove_from_fav">Remove from favorites</string>
    <string name="overflow_generate_labels">Generate labels</string>
    <string name="search_title">Search PickyUp</string>
    <string name="delete_all_title">Delete All</string>
    <string name="report_title">Report</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>

    <!-- Toast/Alert/Snackbar Strings -->
    <string name="twice_press_to_exit">Press back once to exit.</string>
    <string name="constraint_exception_text">You have already added %s to your favorite list.</string>
...
    <string name="no_label_warning_text">No label found for this image.</string>
    <string name="image_not_fully_loaded">Image is still loading. Please wait.</string>
    <string name="emulator_detected">This function is not feasible in emulators.</string>


    <!-- Intent String -->
    <string name="mail_address" translatable="false">nuhkocaa@gmail.com</string>
    <string name="send_with">Send with…</string>

    <!-- Button/TextView Strings -->
    <string name="response_error_text">An error occurred. Check your internet connection or try again in a few minutes.</string>
    <string name="retry_text">Retry</string>
    <string name="response_list_error_text">An error occurred.</string>
...
