<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vpImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="56dp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dropShadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/drop_shadow"
        app:layout_constraintBottom_toTopOf="@+id/bnvImages" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bnvImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BottomNavMenuTheme"/>

</android.support.constraint.ConstraintLayout>
</layout>